<resources>
    <string name="app_name">BeFirst</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_a_member_please_signup_here">Not a member? Please SignUp here</string>
    <string name="signin">Signin</string>
    <string name="be">Be</string>
    <string name="first">First</string>
    <string name="already_member_signin_here">Already member?SignIn here</string>
    <string name="your_name">Your Name</string>
    <string name="mobile">Mobile</string>
    <string name="signup">Signup</string>
    <string name="error_required_field">Please fill this field</string>
    <string name="error_email_address">This email address is invalid</string>
    <string name="error_name">Enter Valid Name</string>
    <string name="error_invalid_password">Password contains 8–15 character atleast 1 capital, 1 small and 1 numeric character.</string>
    <string name="error_mobile_number">Enter mobile number</string>
    <string name="quote">Quote</string>
    <string name="author">Author</string>
    <string name="thought">Thought</string>
    <string name="publishers">Publishers</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello">Hello</string>
    <string name="user_please_read_this">User, Please read this....</string>
    <string name="text">We are appreciating to you for download app. This app for those who have a great thinking process in comparison of others.</string>
    <string name="text2">BeFIRST give a chance to publish your thought in your word.Because we believe Think Makes Best.</string>
    <string name="text3">Now, this app support only English language after an update we will overcome on that and it will be support hindi or many languages.So if you want to publish your thought in hindi so you must have type in Hinglish language.</string>
    <string name="text4">Please follow this T &amp; C.</string>
    <string name="text5">1. Donot copy thought of anyone quote and paste with your name as a author.</string>
    <string name="text6">2. Donot use offensive words.</string>
    <string name="text7">3. Donot hurt anyone with your words.</string>
    <string name="text8">If you are not follow all of this rules. Then account will be deleted automatically.</string>
    <string name="login">Login</string>
    <string name="conti">Continue</string>
    <string name="profile">Profile</string>
    <string name="send_mail">Send Mail</string>
    <string name="subject">Subject</string>
    <string name="your_email">Your email</string>
    <string name="message">Message</string>
    <string name="feedback">Feedback</string>
    <string name="your_thought">Your thought</string>
    <string name="think_amp_say"><![CDATA[Think & Say]]></string>
    <string name="your_thought_toast">This feature will be added soon</string>
    <string name="users_thought">You can see the all publisher thoughts</string>
    <string name="login_first">Go in profile section and login</string>
    <string name="feedback_toast">We need your feedback</string>
    <string name="Successfully_SignOut">Successfully SignOut</string>
    <string name="not_logged_in">You are not logged in</string>
    <string name="login_with_befirst">Login with Befirst</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="not_match">Email and Password does not match</string>

</resources>