<?xml version="1.0" encoding="utf-8"?>
 <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tv_app_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/be"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:fontFamily="@font/dancingscript_bold"/>

            <TextView
                android:id="@+id/tv_app_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/first"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:fontFamily="@font/nosifer_regular"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameWrapper"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="2dp"
            android:textColorHint="@color/colorPrimary"
            app:errorTextAppearance="@style/WelcomeErrorAppearance">

            <EditText
                android:id="@+id/reg_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/your_name"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EmailWrapper"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="2dp"
            android:textColorHint="@color/colorPrimary"
            app:errorTextAppearance="@style/WelcomeErrorAppearance">

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:id="@+id/passWrapper"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="2dp"
            android:textColorHint="@color/colorPrimary"
            app:errorTextAppearance="@style/WelcomeErrorAppearance">

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mobileWrapper"
            android:layout_marginTop="6dp"
            android:textColorHint="@color/colorPrimary"
            app:errorTextAppearance="@style/WelcomeErrorAppearance">

            <EditText
                android:id="@+id/reg_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginBottom="25dp"
                android:hint="@string/mobile"
                android:maxLines="1"
                android:maxLength="10"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_signUp"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/nosifer_regular"/>

        <TextView
            android:id="@+id/tv_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/already_member_signin_here"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/dancingscript_bold"/>


    </LinearLayout>
</ScrollView>

